# zrosty-hay-be

./: .gitignore  LICENSE  README.md  config.py  docker-compose.staging.yaml  docker-compose.yml  docker-compose.yml.prod  package.json  plants.json  plants_data.xlsx  project.env  pyproject.toml  test_data.json  webpack.config.js
.github/workflows/: build_deploy.yaml
api/: __init__.py
api/controllers/: __init__.py  o_auth.py
api/dependency/: __init__.py  plant.py
api/routes/: __init__.py  o_auth.py  plant.py  planting_step_type.py
app/: __init__.py  constants.py
app/commands/: __init__.py  parse_excel.py  parse_json.py
app/controllers/: __init__.py  s3_bucket.py
app/forms/: __init__.py  auth.py  category.py  illness.py  pest.py  photo.py  plant_category.py  plant_family.py  plant_variety.py  planting_program.py  planting_step_type.py  recipe.py  recipe_step.py  user.py
app/models/: __init__.py  category.py  condition.py  feedback.py  illness.py  illness_photo.py  location.py  pest.py  pest_photo.py  photo.py  plant_category.py  plant_family.py  plant_family_category.py  plant_family_illness.py  plant_family_pest.py  plant_family_plant.py  plant_family_recipe.py  plant_variety.py  plant_variety_category.py  (+13 more)
src/: pest.ts  plant_program.ts  slideshow.ts  styles.css
test_api/: conftest.py  fake_data.py  test.env  test_auth.py  test_data.py  test_o_auth.py  test_plant.py  test_planting_step_type.py  test_users.py
test_flask/: conftest.py  test.env  test_auth.py  test_category.py  test_commands.py  test_illness.py  test_pest.py  test_photo.py  test_plant_category.py  test_plant_family.py  test_plant_program_step_type.py  test_plant_variety.py  test_planting_program.py  test_planting_step_type copy.py  test_planting_step_type.py  test_recipe.py  test_recipe_step.py  test_users.py
(+114 files in other folders)
